add title on index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script src="./js/task-2.js" type="module" defer></script>
     <script src="./js/task-3.js" type="module" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>GoIt-Js-Hw-04</h1>
+  </body>
 </html>
